[workspace]
members = [
    "rusty_weel",
    "rusty_weel_macro",
    "http_helper"
]
resolver = "2"
package.include = ["/resources"]

[profile.release]
strip = true # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = true # Link time optimization
panic = "abort"
codegen-units = 1
