[workspace]
members = [
    "rusty_weel_bin",
    "rusty_weel_lib",
    "rusty_weel_macro",
    "http_helper"
]
resolver = "2"
package.include = ["/resources"]

[profile.release]
strip = true # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = false # Link time optimization
panic = "abort"
codegen-units = 12