[workspace]

members = [
    "weel_bin",
    "weel_inject",
    "weel_lib"
]
resolver = "2"

[profile.release]
strip = true # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = false # Link time optimization
codegen-units = 16
incremental = true

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]