[package]
name = "http_helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_helper"
path = "./src/lib.rs"

[dependencies]
reqwest = {version="0.12.4", features = ["blocking", "multipart"]}
serde ={ version = "1.0.215", features = ["derive"]}
log = "0.4.22"
multipart = "0.18.0"
tempfile = "3.10.1"
derive_more = "1.0.0"
mime = "0.3.17"
url = "2.5.3"
bytes = "1.6.0"
urlencoding = "2.1.3"
# parsing of urlencoded form
form_urlencoded = "1.2.1"

[profile.release]
strip = false # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = false # Link time optimization
codegen-units = 8