[package]
name = "http_helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_helper"
path = "./src/lib.rs"

[dependencies]
reqwest = {version="0.12.4", features = ["blocking", "multipart"]}
serde ={ version = "1.0.215", features = ["derive"]}
multipart = "0.18.0"
tempfile = "3.10.1"
mime = "0.3.17"
url = "2.5.3"
bytes = "1.6.0"
urlencoding = "2.1.3"
# parsing of urlencoded form
form_urlencoded = "1.2.1"
derive_more = {version = "1.0.0", features = ["from"]}