[package]
name = "http_helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_helper"
path = "./src/lib.rs"

[dependencies]
serde ={ version = "1.0.217", features = ["derive"]}
multipart = {version = "0.18.0", default-features= false, features = ["server"]}
tempfile = "3.15.0"
mime = "0.3.17"
url = "2.5.4"
bytes = "1.9.0"
urlencoding = "2.1.3"
# parsing of urlencoded form
form_urlencoded = "1.2.1"
derive_more = {version = "1.0.0", features = ["from"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
reqwest = {version="0.12.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false}

[target.aarch64-unknown-linux-gnu.dependencies]
reqwest = {version="0.12.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false}