[package]
name = "rusty-weel"
version = "0.1.0"
edition = "2021"
# Use this version if you want to use the templating into the file (alternative
# to the procecdural macro
#build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0"
json = "0.12.4"
serde_yaml = "0.9.34"

redis = "0.25.3"

# HTTP 
http_helper ={ path = "../http_helper"}
tempfile = "3.10.1"

# Time
chrono = {version = "0.4.38", features = ["serde"]}
# Vote id generation
rand = "0.8.5"
once = "0.3.4"

# Signal handling
ctrlc = {version = "3.4.4", features = ["termination"]}

# Logging
log = "0.4.21"
simple_logger = "5.0.0"

# Macros:
indoc = "2"
rusty-weel-macro ={ path = "../rusty_weel_macro"}
derive_more = "0.99.18"

[dev-dependencies]
rand = "0.8.5"