[package]
name = "rusty-weel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weel_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2"
lazy_static = "1.5.0"
weel_macro ={ path = "../weel_macro" }
weel_lib = { path = "../weel_lib" }

# Logging
log = "0.4.21"
env_logger = "0.11.5"

# Signal handling
ctrlc = {version = "3.4.4", features = ["termination"]}

[profile.release]
strip = true # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = false # Link time optimization
codegen-units = 1