[package]
name = "rusty-weel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weel_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2"
lazy_static = "1.5.0"
weel_inject ={ path = "../weel_inject" }
weel_lib_wrapper = { path = "../weel_lib_wrapper" }

# Logging
log = "0.4.22"
env_logger = "0.11.5"

# Signal handling
ctrlc = {version = "3.4.4", features = ["termination"]}