[package]
name = "weel_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "weel_lib"
path = "src/lib.rs"
#crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = {version = "1.0.210", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
mime = "0.3.17"

redis = "0.27.4"

# HTTP 
http_helper ={ path = "../http_helper"}
reqwest = "0.12.5"
tempfile = "3.10.1"
urlencoding = "2.1.3"

# Parallelism
once_map = "0.4.21"
regex = "1.10.6"

# Time
chrono = {version = "0.4.38", features = ["serde"]}

# Vote id generation
rand = "0.8.5"
once = "0.3.4"

# Logging
log = "0.4.21"

# Macros:
derive_more = "0.99.18"
weel_helper_macros ={ path = "../weel_helper_macros" }
lazy_static = "1.5.0"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
strip = true # Strips symbols from the binary
opt-level = "z" #optimize for size
lto = false # Link time optimization
codegen-units = 16
incremental = true