[package]
name = "weel_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "weel_lib"
path = "src/lib.rs"
crate-type = ["dylib", "lib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = {version = "1.0.215", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
mime = "0.3.17"

redis = "0.28.0"

# HTTP 
http_helper ={ path = "../http_helper"}
tempfile = "3.10.1"
urlencoding = "2.1.3"

# Parallelism
once_map = "0.4.21"

# Time
chrono = {version = "0.4.39", features = ["serde"]}

# Vote id generation
rand = "0.8.5"
once = "0.3.4"

# Macros:
derive_more = {version = "1.0.0", features = ["from"]}
lazy_static = "1.5.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
reqwest = {version="0.12.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false}

[target.'cfg(target_arch = "aarch64")'.dependencies]
reqwest = {version="0.12.12", features = ["blocking", "multipart", "rustls-tls"], default-features = false}

[dev-dependencies]
rand = "0.8.5"